src/styles.scss
@use '@angular/material' as mat;


@import 'styles-variables';
@import 'reboot';
@import 'grid';

@import 'styles-reset';

@include mat.all-component-typographies();
@include mat.core();
@include mat.all-component-densities(-2);


.upgrade-color {
  color: hsl(200, 65%, 45%);
  font-weight: bold;
}
.keep-color {
  color: hsl(103, 44%, 43%);
  font-weight: bold;
}
.infuse-color {
  color: hsla(40, 81%, 48%, 1);
  font-weight: bold;
}
.junk-color {
  color: hsla(0, 76%, 36%, 1);
  font-weight: bold;
}
.archive-color {
  color: rgb(156, 156, 156);
  font-weight: bold;
}


.upgrade-icon-bg {
  background-color: hsl(200, 65%, 71%);
}
.keep-icon-bg {
  background-color: hsl(103, 44%, 69%);
}

.infuse-icon-bg {
  background-color: hsl(50, 81%, 74%);
}

.junk-icon-bg {
  background-color: hsl(0, 43%, 71%);
}
.archive-icon-bg {
  background-color: hsl(0, 0%, 79%);
}

@import 'default-theme.scss';
@import 'light-theme.scss';
@import 'black-theme.scss';

@import 'styles-reset.scss-theme';
@import 'app/app.component.scss-theme';
@import '_util.scss';

@mixin custom-components-theme($theme) {
  @include d2c-styles-reset-theme($theme);
  @include d2c-app-component-theme($theme);
}

.default-theme {
  @include mat.all-component-themes($d2c-theme);
  @include custom-components-theme($d2c-theme);
  @include default-gear-tags($d2c-theme);
 
}

.light-theme {
  @include mat.all-component-colors($d2c-light-theme);
  @include custom-components-theme($d2c-light-theme);
  @include default-gear-tags($d2c-light-theme);
}

.black-theme {
  @include mat.all-component-colors($d2c-black-theme);
  @include custom-components-theme($d2c-black-theme);
  @include black-gear-tags($d2c-black-theme);
}

.break-easy{

  word-wrap: break-word;
  word-break: break-all;
  white-space: unset;
}

.break-none {
  white-space: nowrap;
}

.break-word{
  word-wrap: break-word;
  word-break: normal;
  white-space: normal;
}

.fixed-spinner {
  z-index: 1000;
  position: fixed; 
  left: 0; 
  right: 0; 
  margin-left: auto; 
  margin-right: auto; 
  top: 45%;
  width: 100px; /* Need a specific value to work */
}


.center-spinner {
  z-index: 1000;
  position: absolute; 
  left: 0; 
  right: 0; 
  margin-left: auto; 
  margin-right: auto; 
  width: 100px; /* Need a specific value to work */
}

.data-header {
  min-height: 64px;
  display: flex;
  align-items: center;
  padding-left: 24px;
  font-size: 20px;
}
.mat-mdc-tab{
  padding-left: 10px !important;
  padding-right: 10px  !important;
}

.mat-mdc-tab-link{
  padding-left: 10px !important;
  padding-right: 10px  !important;
}

.tiny {
  font-size: small;
}

.left{
  text-align: left !important;
}

.mat-mdc-table {
  display: table;

  > .mat-mdc-header-row, > .mat-mdc-row {
    display: table-row;
    padding: 5px;
    border: none;

    > .mat-mdc-header-cell, > .mat-mdc-cell {
      display: table-cell;
      height: 48px;
      padding: 5px;
      //width: 150px;
      text-align: left;
      vertical-align: middle;

      border-bottom: 1px solid rgba(0, 0, 0, 0.12);
    }
  }
}

.centerMe{
  text-align: center;
  margin-left: auto; 
  margin-right: auto; 
}


.foobar{
  display: flex;
  flex-direction: column;
}

.half-opacity {
  opacity: 0.5;
}


.mobile-button-row {
  display: none;
  visibility: hidden;
}


@media screen and (max-width: 600px) {
  .mobile-button-row {
    display: flex;
    visibility: visible;
    align-items: center;
    justify-content: space-around;
    margin-bottom: 5px;
  }

  
  .tree-leaf{
    padding-left: 0px !important;
  }
}

.loading{
  text-align: center;
  margin-top: 100px;
  margin-left: auto; 
  margin-right: auto; 
}

.space-right{
  margin-right: 0.30em !important;
}

.space-left{
  margin-left: 0.30em !important;
}

.mat-button-toggle-appearance-standard .mat-button-toggle-label-content{
  line-height: 32px !important;
}

mat-form-field.full-width .mat-mdc-form-field-infix{
    min-width: 0;
    width: 100% !important;
}

// MDC icon buttons default to 48px (40px at density -2). In form field suffixes
// they should be compact to match legacy Material sizing.
mat-form-field button[matSuffix].mat-mdc-icon-button {
  width: 24px;
  height: 24px;
  padding: 0;
  font-size: 18px;
}

// MDC fill form fields render as rounded rectangles with hidden labels.
// Override to match legacy Material styling: bottom border only, visible label,
// and compact sizing to match the legacy ~53px total height.
.mat-mdc-form-field.mat-form-field-appearance-fill {
  .mdc-text-field--filled {
    background-color: transparent;
    border-radius: 0;
    padding-left: 0;
    padding-right: 0;
    border-bottom: 1px solid rgba(255, 255, 255, 0.42);

    &:hover {
      border-bottom-color: rgba(255, 255, 255, 0.87);
    }
  }

  .mat-mdc-form-field-infix {
    padding-top: 16px;
    padding-bottom: 6px;
    min-height: unset;
  }

  .mat-mdc-floating-label {
    display: block !important;
    font-size: 13px;
    top: 22px;
  }

  .mdc-line-ripple::before,
  .mdc-line-ripple::after {
    border-bottom-color: currentColor;
  }

  // Hide the subscript/hint area that MDC always reserves
  .mat-mdc-form-field-subscript-wrapper {
    display: none;
  }

  input.mat-mdc-input-element {
    font-size: 13px;
    line-height: 15px;
  }
}

.preserve-white-space{
  white-space: pre-wrap;
}

.triumph-score {
  margin: 10px;
  text-align: left;
}


.pres-node-prog {
  max-width: 100px;
  
  margin-top: 5px;
  margin-bottom: 10px;
}

.hide-complete-triumphs {
  margin-left: 26px;
  font-size: small;
  font-weight: lighter;
}

.low-hanging-node-prog {
  max-width: 200px;
}

.low-hanging-desc {
  max-width: 500px;
}

.max-width-500 {
  max-width: 500px;
}

@media screen and (max-width: 600px) {
  .low-hanging-desc {
    max-width: 300px;
  }
}


.transparent-leaf-icon {
  float: left;
  width: 48px;
  height: 48px;
  min-width: 48px;
  border-radius: 5px;
  margin: 5px;
  background-size: cover;
}


.transparent-branch-icon {
  float: left;
  width: 32px;
  height: 32px;
  border-radius: 5px;
  margin: 5px;
  background-size: cover;
}

.hide-complete-collectibles {
  text-align: left;
  margin: 5px;
  margin-top: 10px;
  margin-left: 10px;
  font-size: small;
  font-weight: lighter;
}

.margin-top-5 {
  margin-top: 5px;
}

.margin-top-10 {
  margin-top: 10px;
}

.margin-5 {
  margin: 5px !important;
}

.collection-header {
  margin: 10px;
  text-align: left;
}

.pad-left{
  margin-left: 5px;
}

.pad-left-more{
  margin-left: 15px !important;
}

.pad-right{
  margin-right: 5px;
}

.pad-bottom{
  margin-bottom: 5px;
}


.void {
  background: #b184c5 !important;
}

.solar {
  background: #f2721b !important;
}

.stasis {
  background: #4C89FF !important;
}

.strand {
  background: #35E267 !important;
}

.arc {
  background: #85c5ec !important;
}

.void-text {
  color: #b184c5 !important;
}

.solar-text {
  color: #f2721b !important;
}

.stasis-text {
  color: #4C89FF !important;
}

.strand-text {
  color: #35E267 !important;
}

.arc-text {
  color: #85c5ec !important;
}

.pointer { 
  cursor: pointer;
}

.icon {
  display: inline-block;
  width: 48px;
  height: 48px;
  background-size: cover;

  &.large {
    width: 96px;
    height: 96px;
  }

  &.small {
    width: 24px;
    height: 24px;
  }

  &.tiny {
    width: 12px;
    height: 12px;
  }

  &.size-22 {
    width: 22px;
    height: 22px;
  }

  &.size-40 {
    width: 40px;
    height: 40px;
  }

  &.size-48 {
    width: 48px;
    height: 48px;
  }
}

// add &#13; between your strings to break them into different lines
.multi-line-tooltip {
  white-space: pre-line;
}

// put this on text to give it a `...` at the end before it overflows
// the parent container needs to have a static width
.truncate {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.grid-parent {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  grid-column-gap: 10px;
  grid-row-gap: 10px;
  grid-auto-flow: row dense;

  .mat-mdc-card {
    display: flex;
    flex-direction: column;
  }
  
  .mat-mdc-card-header {
    display: flex;
    flex-direction: row;
    flex-shrink: 0;
  }
  
  .mat-mdc-card-actions {
    display: flex;
    flex-direction: row;
    flex-shrink: 0;
  }
  
  .mat-mdc-card-content{
    flex-grow: 1;
    // outline: 1px solid red; // uncomment to see test outlines
  }
}

.pointer {
  cursor: pointer;
}

.fake-link {
  cursor: pointer;
}

.fake-link-underlined {
  cursor: pointer;
  text-decoration: underline;
}

.fake-link-disabled {
  cursor: default;
}

@media (min-width: 1450px) {
  .d-xxl-none {
    display: none !important;
  }
  .d-xxl-inline {
    display: inline !important;
  }
  .d-xxl-inline-block {
    display: inline-block !important;
  }
  .d-xxl-block {
    display: block !important;
  }
  .d-xxl-table {
    display: table !important;
  }
  .d-xxl-table-row {
    display: table-row !important;
  }
  .d-xxl-table-cell {
    display: table-cell !important;
  }
  .d-xxl-flex {
    display: -ms-flexbox !important;
    display: flex !important;
  }
  .d-xxl-inline-flex {
    display: -ms-inline-flexbox !important;
    display: inline-flex !important;
  }
}

.report-link {
  top: -15px !important;
  height: 15px !important;
  padding-right: 5px !important;
}

.nitro-consent-link button{
  background-color: rgba(0,0,0,0);
  border: none;
}

.nitro-consent-link button::before{
  content: "| ";
}

.nitro-consent-link a::before{
  content: "| ";
}


.deal-label {
  font-size: 12px;
  font-weight: 400;
  margin: 3px 0px 5px 0px;
  max-width: 75px;
}

.deal-label {
  font-size: 12px;
  font-weight: 400;
  margin: 3px 0px 5px 0px;
  max-width: 75px;
}

.vendor-deal-label {
  font-size: 12px;
  font-weight: 600;
  color: rgb(124,124,124);
  // opacity: 0.5;
  margin: 3px 0px 5px 0px;
  max-width: 75px;
}

.margin-10 {
  margin: 10px !important;
}

.margin-25 {
  margin: 25px !important;
}

.invert {
  filter: invert(50%);
}

.brighten {
  filter: brightness(1.8);
}

.list-icon {
  background-size: cover;
  display: block;
}


.full-width {
  width: 100%;
}

.currency-icon {
  width: 24px;
  height: 24px;
  background-size: cover;
  display: inline-block;
  vertical-align: middle;
  margin-right: 5px;
}

.currency-text {
  font-size: 14px;
}

.inline-block {
  display: inline-block;
}

